new Integer() = Integer.valueOf()